# swing-systems

./: .gitignore  New Text Document.bat  README.md  pyproject.toml
.github/workflows/: daily-scan.yml
configs/: seed_universe.txt  universe.yaml
configs/watchlists/: rsi2_5_70_sso.yaml  rsi2_us.yaml
docs/: diagnostics.csv  diagnostics.html  index.html
outputs/connors_3d_hl/: entries_2025-10-10.csv  entries_2025-10-13.csv  entries_2025-10-14.csv  entries_2025-10-16.csv  exits_2025-10-14.csv  exits_2025-10-15.csv  exits_2025-10-16.csv  open_positions_2025-10-10.csv  open_positions_2025-10-13.csv  open_positions_2025-10-14.csv  open_positions_2025-10-15.csv  open_positions_2025-10-16.csv
outputs/double_seven/: entries_2025-10-10.csv  open_positions_2025-10-14.csv
outputs/rsi2_5_70_sso/: open_positions_2025-10-16.csv
outputs/rsi2_us/: entries_2025-10-10.csv  exits_2025-10-10.csv  exits_2025-10-13.csv  exits_2025-10-14.csv  exits_2025-10-15.csv  exits_2025-10-16.csv  open_positions_2025-10-10.csv  open_positions_2025-10-13.csv  open_positions_2025-10-14.csv  open_positions_2025-10-15.csv  open_positions_2025-10-16.csv
src/swing_systems/common/: engine.py  indicators.py  io.py
src/swing_systems/strategies/: connors_3d_hl.py  double_seven.py  rsi2_5_70_sso.py  rsi2_us.py
state/: connors_3d_hl_state.csv  double_seven_state.csv  rsi2_5_70_sso_state.csv  rsi2_us_state.csv
