[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swing-systems"
version = "0.3.0"
description = "Swing scanners with per-strategy watchlists and auto data build"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0", "numpy>=1.24", "pyyaml>=6.0", "yfinance>=0.2.40"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["swing_systems*"]

[project]
# ...
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "pyyaml>=6.0",
  "yfinance>=0.2.40",
  "requests>=2.31"
]